chore(examples): Ensure display is consistent in light/dark mode

--- a/examples/electron/electron-bundled/src/index.css
+++ b/examples/electron/electron-bundled/src/index.css
@@ -3,6 +3,7 @@ body {
   max-width: 600px;
   margin: 50px auto;
   padding: 0 20px;
+  background-color: #fff;
 }
 
 button {
